fix bugs and remove boot module